Added Mobile html
Added an html file for viewing on mobile. Does not have slideshow- only black background.

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@ html,
 body,
 header,
 #intro {
-    height: 100%;
-    position:relative;
+  height: 100%;
+  position:relative;
 }
-
+#black{
+  background-color: black;
+  left: 0%;
+}
 .slideImage{
   height: 100%;
   width: 100%;
